[package]
name = "dcache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
#chrono = { version = "0.4.24" , features = ["serde"]}
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
dotenv = "0.15.0"
log4rs = "1.2.0"
log = "0.4.17"
lru = "0.10.0"
moka = "0.10"
tokio = {version= "1.27.0",features = ["full"]}
lazy_static = "1.4.0"
actix-rt = "2.8.0"
futures = "0.3.28"
#sqlx = { version = "0.6.3", features = ["runtime-async-std-native-tls", "mysql", "chrono", "uuid"] }
#uuid = { version = "1.3.1", features = ["serde", "v4"] }